--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     }
   ],
   "dependencies": {
-    "eslint-config-airbnb": "2.0.0",
-    "eslint-plugin-rapid7": "5.0.1"
+    "eslint-config-airbnb": "8.0.0",
+    "eslint-plugin-jsx-a11y": "1.0.2",
+    "eslint-plugin-import": "1.6.0",
+    "eslint-plugin-react": "5.0.1"
   },
   "description": "Rapid7's ESLint config, following our styleguide",
   "devDependencies": {
-    "babel-tape-runner": "1.2.0",
-    "eslint": "^1.8.0",
-    "eslint-plugin-react": "^3.7.1",
-    "react": "^0.13.3",
-    "tape": "^4.2.2"
+    "eslint": ">=2.0.0",
+    "react": ">=0.14.0 <=0.14.8 || >=15.0.0"
   },
   "directories": {},
   "homepage": "https://github.com/rapid7/eslint-config-rapid7",
@@ -39,8 +38,8 @@
   "main": "index.js",
   "maintainers": [
     {
-      "name": "Ben Tesser",
-      "email": "btesser@rapid7.com"
+      "name": "Tony Quetano",
+      "email": "tony_quetano@rapid7.com"
     }
   ],
   "name": "eslint-config-rapid7",
@@ -53,5 +52,5 @@
     "type": "git",
     "url": "git+https://github.com/rapid7/eslint-config-rapid7.git"
   },
-  "version": "0.0.15"
+  "version": "1.0.0"
 }
