Fix: React rules shouldn't be in the base config (#1)
* Per the readme, the base config shouldn't lint React. Moved the react ruleset out of base and into index.

* 1.1.0

* Updated author and contributors.

* Fixed email addresses. Put authors/contributors fields back to object form.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-
   "author": {
-    "name": "Ben Tesser",
-    "email": "btesser@rapid7.com"
+    "name": "Tony Quetano",
+    "email": "tony_quetano@rapid7.com"
   },
   "bugs": {
     "url": "https://github.com/rapid7/esling-config-rapid7/issues"
   },
   "contributors": [
     {
-      "name": "Ben Tesser",
-      "email": "btesser@rapid7.com"
+      "name": "Tony Quetano",
+      "email": "tony_quetano@rapid7.com"
+    },
+    {
+      "name": "David Greene",
+      "email": "david_greene@rapid7.com"
     }
   ],
   "dependencies": {
@@ -52,5 +55,5 @@
     "type": "git",
     "url": "git+https://github.com/rapid7/eslint-config-rapid7.git"
   },
-  "version": "1.0.0"
+  "version": "1.1.0"
 }
