--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     }
   ],
   "dependencies": {
-    "eslint": "^3.7.0",
+    "eslint": "^3.16.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-react": "^6.4.0"
+    "eslint-plugin-react": "^6.10.0"
   },
   "description": "Rapid7's ESLint config, following our styleguide",
   "devDependencies": {
@@ -55,5 +55,5 @@
     "type": "git",
     "url": "git+https://github.com/rapid7/eslint-config-rapid7.git"
   },
-  "version": "2.7.0"
+  "version": "2.8.0-0"
 }
