Update to scoped pkg name, update pkg json metadata

--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "author": {
-    "name": "Tony Quetano",
-    "email": "tony_quetano@rapid7.com"
-  },
+  "author": "UXE <ux_engineering@rapid7.com>",
   "bugs": {
-    "url": "https://github.com/rapid7/esling-config-rapid7/issues"
+    "url": "https://github.com/rapid7/eslint-config-rapid7/issues"
   },
   "contributors": [
-    {
-      "name": "Tony Quetano",
-      "email": "tony_quetano@rapid7.com"
-    },
-    {
-      "name": "David Greene",
-      "email": "david_greene@rapid7.com"
-    }
+    "Tony Quetano <tony_quetano@rapid7.com>",
+    "David Greene <david_greene@rapid7.com>"
   ],
   "dependencies": {
     "eslint-plugin-import": "^2.13.0",
@@ -25,7 +16,6 @@
   "devDependencies": {
     "eslint": "^7.17.0"
   },
-  "directories": {},
   "homepage": "https://github.com/rapid7/eslint-config-rapid7",
   "keywords": [
     "rapid7",
@@ -37,20 +27,10 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "maintainers": [
-    {
-      "name": "Tony Quetano",
-      "email": "tony_quetano@rapid7.com"
-    }
-  ],
-  "name": "eslint-config-rapid7",
-  "optionalDependencies": {},
+  "name": "@rapid7/eslint-config",
   "peerDependencies": {
     "eslint": "^7.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rapid7/eslint-config-rapid7.git"
-  },
+  "repository": "rapid7/eslint-config-rapid7",
   "version": "4.0.0"
 }
